# avp-local-agent

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_and_test.yml  ci.yml  nightly_build.yml  semantic_version_check.yml
examples/simple_semver_check/: Cargo.toml  README.md
examples/simple_semver_check/src/: main.rs
scripts/: build_and_test.sh
src/: lib.rs
src/private/: mod.rs
src/private/sources/: mod.rs  retry.rs
src/private/sources/cache/: mod.rs  policy.rs  template.rs
src/private/sources/policy/: core.rs  error.rs  loader.rs  mod.rs  reader.rs
src/private/sources/schema/: core.rs  error.rs  mod.rs  reader.rs
src/private/sources/template/: core.rs  error.rs  loader.rs  mod.rs  reader.rs
src/private/translator/: avp_to_cedar.rs  error.rs  mod.rs
src/private/types/: aliases.rs  cli_shorthand.rs  mod.rs  policy_id.rs  policy_selector.rs  policy_store_filter.rs  policy_store_id.rs  template_id.rs
src/public/: client.rs  entity_provider.rs  mod.rs  policy_set_filter.rs  policy_set_provider.rs
tests/: lib.rs
tests/data/: sweets.entities.json
