# Cargo.toml specifies your Rust crate's metadata
#
# There are several options available to you for customizing your package
# and providing supplementary metadata. They are documented in the Manifest
# page of the Cargo reference:
#
#   https://doc.rust-lang.org/cargo/reference/manifest.html
#
# A particularly important key is [workspace]. As your project grows, you may
# wish to refactor it into multiple crates. Workspaces are the mechanism for
# doing so. They are also documented in the reference:
#
#  https://doc.rust-lang.org/cargo/reference/workspaces.html
#

[package]
name = "avp-local-agent"
edition = "2021"
version = "0.1.0"

publish = false

[dependencies]
# Utilities
async-trait = "0.1.71"
backoff = { version = "0.4.0" , features = ["tokio"] }
chrono = "0.4.26"
derive_builder = "0.12.0"
futures = { version = "0.3.28", features = ["std"] }
http = "0.2.9"
once_cell = "1.18.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_repr = "0.1.16"
tokio = { version = "1.0", features = ["full", "signal", "sync", "parking_lot"] }
uuid = "1.4.1"
rand = "0.8.5"

### TODO: Updated this before releasing
cedar-local-agent = { version = "0.1.0", path = "../cedar-local-agent"}

# Error, Logging, Tracing
thiserror = "1.0.41"
tracing = "0.1.37"

# Cedar
cedar-policy = "2.3.0"
cedar-policy-core = "2.3.0"
cedar-policy-formatter = "2.3.0"
cedar-policy-validator = "2.3.0"

# AWS
aws-config = "0.56"
aws-credential-types = "0.56"
aws-sdk-verifiedpermissions = "0.2.0"
aws-smithy-async = "0.56"
aws-smithy-http = "0.56"
aws-types = "0.56"

[dev-dependencies]
# Mocking out aws sdk requests
aws-smithy-async = "0.56"
aws-smithy-client = { version = "0.56", features = ["test-util"] }
aws-smithy-http = "0.56"
aws-smithy-types = "0.56"
aws-types = "0.56"
http = "0.2.9"
serial_test = "2.0.0"

[features]
integration-tests = []
