# Cargo.toml specifies your Rust crate's metadata
#
# There are several options available to you for customizing your package
# and providing supplementary metadata. They are documented in the Manifest
# page of the Cargo reference:
#
#   https://doc.rust-lang.org/cargo/reference/manifest.html
#
# A particularly important key is [workspace]. As your project grows, you may
# wish to refactor it into multiple crates. Workspaces are the mechanism for
# doing so. They are also documented in the reference:
#
#  https://doc.rust-lang.org/cargo/reference/workspaces.html
#
[package]
name = "avp-local-agent"
edition = "2021"
version = "2.0.0"
license = "Apache-2.0"
description = "Amazon Verified Permissions policy and entity providers. These providers are used to build a `cedar-local-agent` simple::Authorizer."
keywords = ["cedar", "agent", "verified_permissions", "authorization", "security"]
repository = "https://github.com/awslabs/avp-local-agent"

[dependencies]
# Main definitions for a Cedar-based authorization agent
cedar-local-agent = { git = "https://github.com/cedar-policy/cedar-local-agent.git" }

# Cedar
cedar-policy = "4.2.0"

# AWS
aws-config = "1.0.1"
aws-credential-types = "1.0.1"
aws-sdk-verifiedpermissions = "=1.3.0"
aws-smithy-async = "1.0.2"
aws-smithy-runtime-api = "1.0.2"
aws-types = "1.0.1"

# Error, Logging, Tracing
thiserror = "2.0.11"
tracing = "0.1.37"

# Utilities
async-trait = "0.1.71"
backon = { version = "1" }
# backoff = { version = "0.4.0" , features = ["tokio"] }
chrono = "0.4.26"
derive_builder = "0.20.2"
futures = { version = "0.3.28", features = ["std"] }
#rand = "0.8.5"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.0", features = ["full", "signal", "sync", "parking_lot"] }
nom = { version = "8", default-features = false }

[dev-dependencies]
# Mocking out aws sdk requests
aws-smithy-async = "1.0.2"
aws-smithy-types = "1.0.2"
aws-smithy-runtime = { version = "1.0.2", features = ["test-util"]}
aws-types = "1.0.1"

[features]
integration-tests = []
